[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/Sprites/UI/arrChoice.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Battle/BaseDialog.gd" type="Script" id=2]
[ext_resource path="res://Data/Fonts/Dialog_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Data/Backgrounds/menuframe.png" type="Texture" id=4]

[node name="BaseDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -475.0
rect_pivot_offset = Vector2( -229, 86 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Basic dialog used for the main choice of the battle: Moves, Items, OpMons and Run."
}

[node name="SmallDialog" type="NinePatchRect" parent="."]
margin_left = 577.0
margin_right = 829.0
margin_bottom = 107.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelItems" type="Label" parent="SmallDialog"]
margin_left = 33.0
margin_top = 60.0
margin_right = 83.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -550, -133 )
text = "BATTLE_BASEDIALOG_ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOpMon" type="Label" parent="SmallDialog"]
margin_left = 153.0
margin_top = 17.0
margin_right = 221.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( -550, -133 )
text = "BATTLE_BASEDIALOG_OPMON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMoves" type="Label" parent="SmallDialog"]
margin_left = 33.0
margin_top = 17.0
margin_right = 97.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( -550, -133 )
text = "BATTLE_BASEDIALOG_MOVES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRun" type="Label" parent="SmallDialog"]
margin_left = 153.0
margin_top = 60.0
margin_right = 191.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -550, -133 )
text = "BATTLE_BASEDIALOG_RUN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="SmallDialog"]
margin_left = 12.0
margin_top = 20.0
margin_right = 42.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigDialog" type="NinePatchRect" parent="."]
margin_right = 380.0
margin_bottom = 107.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="BigDialog"]
margin_left = 11.0
margin_top = 43.0
margin_right = 368.0
margin_bottom = 97.0
text = " What should [OpMon] do?"
